# voxel_terrain

./: .gitignore  CMakeLists.txt  README.md  index.md  main.cpp  program.cpp  program.hpp  renderer.cpp  renderer.hpp
shaders/: fragment.glsl  vertex.glsl
shadow_baking/: CMakeLists.txt  main.cpp
